--- a/package.json
+++ b/package.json
@@ -7,16 +7,12 @@
     "dev": "webpack serve --mode development"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.4",
     "classnames": "^2.3.2",
     "firebase": "^9.15.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.5.0",
-    "styled-components": "^5.3.6"
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
